# mdp_mirte

./: .gitignore  DomainGreenhouse.pddl  GUI_DATA_FLOW.md  GUI_QUICKSTART.md  README.md  pixi.toml  pixi_activation.sh  problem_generated.pddl  repos.repos
greenhouse_configs/: greenhouse_config.yaml  tag_locations.json  tag_locations_empty.json
src/: gh_twin_data_storage
src/data_storage/: README.md
src/data_storage/gh_twin_data_storage_nodes/: typedb_node.py
src/data_storage/launch/: pddl_planner.launch.py
src/flower_perception/: README.md  package.xml  setup.cfg  setup.py
src/flower_perception/flower_perception/: flower_bbox_projection_node.py  flower_detector_node.py  flower_detector_tracker_node.py  flower_height_estimator_node.py  flower_triangulation_node.py  lidar_to_camera_projection_node.py
src/flower_perception/launch/: flower_perception.launch.py
src/flower_perception/rviz/: FP_rviz.rviz
src/flower_perception/training/: train_flower_detector.py  val_flower_detector.py
src/gh_twin/: .gitignore  CMakeLists.txt  README.md  gui_features.md  nav_features.md  package.xml  setup.cfg  setup.py
src/gh_twin/config/: amcl_config.yaml  laser_filter.yaml  nav_debug.txt  navigation.yaml  navigation_hardware.yaml  rviz_config.rviz  slam_config.yaml  slam_hardware.yaml  twist_mux.yaml
src/gh_twin/data_storage/: CMakeLists.txt  README.md  setup.cfg  setup.py
src/gh_twin/data_storage/gh_twin_data_storage/: nosql_db_node.py  pddl_manager_node.py  sql_db_node.py  typedb_node.py
src/gh_twin/data_storage/gh_twin_data_storage_nodes/: nosql_db_node.py  pddl_planner_node.py  plan_executor_node.py  sql_db_node.py  typedb_node.py
src/gh_twin/data_storage/launch/: pddl_manager.launch.py  task_scheduler.launch.py  typedb.launch.py
src/gh_twin/data_storage/msg/: Plant.msg  Sensor.msg  SensorData.msg
src/gh_twin/gh_twin/: apriltag_detector.py  arm_controller.py  joystick_control.py  nav_to_pose.py  publish_waypoint.py  vision_controller.py
src/gh_twin/gui/: auth.py  bugs.yaml  dashboard_page.py  login_page.py  main.py  plants.yaml  sensortag_locations.json  styles.py  users.txt
src/gh_twin/gui/.nicegui/: storage-user-5729022a-6811-43e6-ac1a-42b0c883ed93.json
src/gh_twin/launch/: amcl.launch.py  demo_teleop.launch.py  greenhouse_launch.xml  joystick_control.launch.py  nav.launch.py  nav_hardware.launch.py  slam.launch.py  slam_hardware.launch.py
src/gh_twin/maps/: map.pgm  map.yaml  map_gh_simplified.pgm  map_gh_simplified.yaml  map_hardware.pgm  map_hardware.yaml  waypoint_generator.py  waypoints.yaml  waypoints_hardware.yaml
src/gh_twin/models/greenhouse_walls/: model.config  model.sdf
src/gh_twin/models/wooden_crate/: model.config  model.sdf
src/gh_twin/rviz/: rviz_config.rviz
src/gh_twin/worlds/: greenhouse.world
src/gh_twin_data_storage/: CMakeLists.txt  README.md  move_to_scan.py  package.xml  setup.py  test_arm_controller.py
src/gh_twin_data_storage/config/: arm_poses.yml  waypoints.yml  waypoints_hardware.yaml
src/gh_twin_data_storage/gh_twin_data_storage_nodes/: __init__.py  arm_controller.py  pddl_planner_node.py  plan_executor_node.py  typedb_node.py
src/gh_twin_data_storage/launch/: task_scheduler.launch.py  task_scheduler_hardware.launch.py  typedb.launch.py  typedb_hardware.launch.py
src/gh_twin_data_storage/msg/: Flower.msg  Pest.msg  Sensor.msg
src/gh_twin_interfaces/: CMakeLists.txt  package.xml
src/gh_twin_msgs/: CMakeLists.txt  README.md  package.xml
src/gh_twin_msgs/msg/: Pest.msg  Sensor.msg
src/mirte_indicator_devices/: README.md  package.xml  setup.cfg  setup.py
src/mirte_indicator_devices/launch/: mirte_feedback_nodes.launch.py
src/mirte_indicator_devices/mirte_indicator_devices/: audio_node.py  led_controller_node.py
tools/: popf_env.sh
typedb_files/: greenhouse-data.tql  greenhouse-schema.tql
typedb_files/.typedb-studio/.unsaved/: Untitled1.tql
