<?xml version="1.0"?>
<package format="3">
  <name>gh_twin</name>
  <version>0.2.0</version>
  <description>Greenhouse Digital Twin Simulation</description>
  <maintainer email="abhijithprakas@tudelft.nl">Group 17</maintainer>
  <license>BSD-3-Clause</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <depend>gazebo_ros_pkgs</depend>
  <depend>geometry_msgs</depend>
  <depend>mirte_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>rclcpp</depend>
  <depend>mirte_gazebo</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2</depend>
  <depend>twist_mux</depend>
  <depend>action_msgs</depend>
  <depend>control_msgs</depend>
  <exec_depend>mirte_control</exec_depend>
  <exec_depend>mirte_master_description</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>gazebo_ros2_control</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>teleop_twist_keyboard</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>joy</exec_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  
  <member_of_group>rosidl_interface_packages</member_of_group>
  
  <export>
    <build_type>ament_python</build_type>
    <gazebo_ros gazebo_model_path="${prefix}/models"/>
  </export>
  
  
</package>
