<?xml version="1.0"?>
<package format="3">
  <name>gh_twin_data_storage</name>
  <version>0.1.0</version>
  <description>Data storage package for greenhouse digital twin.</description>
  <maintainer email="maintainer@example.com">MIRTE Team</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>ament_cmake_python</build_depend>
  <build_depend>rclpy</build_depend>

  <exec_depend>ament_cmake_python</exec_depend>
  <exec_depend>rclpy</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
